--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://username.github.io/
-baseurl: /sustain/
+url: http://mithun05.github.io/
+baseurl: /portfolio/
 title: Chris Turner
 author: Chris Turner
 description: Personal blog and resume
