--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ description: Personal blog and resume
 avatar: profile.png
 email: mdeshpa1@binghamton.edu
 github: Mithun05/ # username
-#twitter: 
-linkedin: https://in.linkedin.com/in/mithun-deshpande
-#stackoverflow: username   #e.g: users/2735833/proton1h1
+twitter: mgd2171991
+linkedin: mithun-deshpande
+stackoverflow: users/4387633/md05   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
 #disqus: username
 google_analytics: UA-69391421-1
