--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: https://mithun05.github.io/
-baseurl: 
+baseurl: //
 title: Mithun Deshpande
 author: Mithun Deshpande
 description: Personal blog and resume
