--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: https://mithun05.github.io
+url: https://mithun05.github.io/
 baseurl: 
 title: Mithun Deshpande
 author: Mithun Deshpande
