--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /portfolio/
 title: Mithun Deshpande
 author: Mithun Deshpande
 description: Personal blog and resume
-avatar: profile.png
+avatar: profile.jpg
 email: mdeshpa1@binghamton.edu
 github: Mithun05/ # username
 twitter: mgd2171991
