--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ highlighter: rouge
 markdown: kramdown
 rdiscount:
   extensions: [smart]
-permalink: /:title.html
+#permalink: /:title.html
+permalink: /:index.html
 paginate: 5
 plugins: [jekyll-paginate]
 port: 3000
