--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@ highlighter: rouge
 markdown: kramdown
 rdiscount:
   extensions: [smart]
-#permalink: /:title.html
+permalink: /:title.html
 paginate: 5
 plugins: [jekyll-paginate]
-#port: 3000
+port: 3000
 safe: true
 
 
 # edit here to achieve your personal greatness
 url: http://mithun05.github.io/
-baseurl: /
+baseurl: /aboutme/
 title: Mithun Deshpande
 author: Mithun Deshpande
 description: Personal blog and resume
