--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /aboutme/
 title: Mithun Deshpande
 author: Mithun Deshpande
 description: Personal blog and resume
-avatar: profile.jpg
+avatar: profile2.jpg
 email: mdeshpa1@binghamton.edu
 github: Mithun05/ # username
 twitter: mgd2171991
